--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+html {
+  background: rgba(10, 10, 20, 1);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: 1fr;
+  gap: 0 0;
+  grid-template-areas: ". .";
+}
+
+.Sidebar {
+  background-color: rgba(20, 20, 30, 1);
+  height: 100vh;
+  padding: 20px;
+}
+
+.Sidebar ul button {
+  border: none;
+  outline: none;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 15px;
+  color: white;
+  background-color: rgba(30, 30, 40, 1);
+  border-radius: 8px;
+}
+
+.Sidebar ul button:not(:last-child) {
+  margin: 0 0 5px 0;
+}
+
+.WeatherDisplay {
+  padding: 20px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.CityForm {
+  margin: 15px 0 0 0;
+}
+
+.CityForm form input {
+  border: none;
+  outline: none;
+  padding: 10px 15px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(30, 30, 40, 1);
+  border-radius: 8px;
+  margin: 5px 0 10px 0;
+}
+
+.CityForm form input::placeholder {
+  color: rgba(255, 255, 255, .5);
+}
+
+.CityForm button {
+  border: none;
+  outline: none;
+  padding: 10px 15px;
+  color: white;
+  background-color: salmon;
+  border-radius: 8px;
+}
+
+.CityForm button:hover {
+  cursor: pointer;
+}
+
+.CityForm hr {
+  margin: 20px 0;
+  border: 1px solid rgba(255, 255, 255, .1);
+}
+
+.WeatherDisplay .data {
+  background-color: rgba(20, 20, 30, 1);
+  border-radius: 8px;
+  padding: 20px;
+  text-align: center;
 }
